@@ -180,12 +180,14 @@
 	<attribute name="long_name" value="x_wind" type="string" />
 	<attribute name="standard_name" value="x_wind" type="string" />
 	<attribute name="units" value="m/s" type="string" />
+	<spatial_vector direction="x,longitude" counterpart="y_wind" />
 </parameter>
 <parameter id="3" name="y_wind">
 	<attribute name="_FillValue" value="-32767" type="short" />
 	<attribute name="long_name" value="y_wind" type="string" />
 	<attribute name="standard_name" value="y_wind" type="string" />
 	<attribute name="units" value="m/s" type="string" />
+	<spatial_vector direction="y,latitude" counterpart="x_wind" />
 </parameter>
 -->
 <!--
