@@ -1,6 +1,10 @@
   * 2008-... fimex-0.8beta
     * moving headers to fimex/*.h
     * throw exception when renaming non-existing field in NetCDF-writer (instead of segfault)
+    * allowing additional parameters to MIN_DATETIME()/MAX_DATETIME in attributes for felt2nc_variables
+    * changing global attributes for damocles
+    * fixing a bug in vector-interpolation (errors during calculation of v-vector)
+    * improving speed of vector-interpolation
   * 2008-06-12 fimex-0.7
     * fixing coordinates of polar-stereographic felt-files
   * 2008-06-11 fimex-0.6
